--- a/graphics/assimp/AssimpTest/CMakeLists.txt
+++ b/graphics/assimp/AssimpTest/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 
-set(name AssimpTest)
+#set(name AssimpTest)
+set(name AssimpTestPP)
 project(${name})
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
