converting assimp COLLADA loaded geometry model into OptiX model, succeed to get a grey screen

--- a/graphics/raytrace/CMakeLists.txt
+++ b/graphics/raytrace/CMakeLists.txt
@@ -68,6 +68,7 @@ add_optix_executable(${name}
                      AOScene.cc
                      tutorial0.cu
                      TriangleMesh.cu
+                     material0.cu
 )
 
 
