succeed to match g4daenode tree, after fixing transforms now getting interative ray tracing of G4DAE DYB_NOEXTRA with OptiX

--- a/graphics/raytrace/CMakeLists.txt
+++ b/graphics/raytrace/CMakeLists.txt
@@ -70,6 +70,7 @@ add_optix_executable(${name}
                      AssimpCommon.cc
                      AssimpNode.cc
                      AssimpTree.cc
+                     AssimpRegistry.cc
                      OptiXAssimpGeometry.cc
                      OptiXScene.cc
                      tutorial0.cu
@@ -85,6 +86,7 @@ add_executable( AssimpGeometryTest
                 AssimpCommon.cc
                 AssimpNode.cc
                 AssimpTree.cc
+                AssimpRegistry.cc
 
 )
 
