attempt to combine material and surface properties into a GSubstance class, aiming for 1-1 relation between GSubstances and OptiX material : solid/surf based model mismatch problems

--- a/optix/ggeo/CMakeLists.txt
+++ b/optix/ggeo/CMakeLists.txt
@@ -18,6 +18,8 @@ add_library(${name} SHARED
                 GMaterial.cc
                 GSkinSurface.cc
                 GBorderSurface.cc
+                GSubstance.cc
+                GSubstanceLib.cc
                 GSolid.cc
                 GMesh.cc
                 GGeo.cc
@@ -44,6 +46,8 @@ GPropertyMap.hh
 GSolid.hh
 GSkinSurface.hh
 GBorderSurface.hh
+GSubstance.hh
+GSubstanceLib.hh
 GVector.hh
 GMatrix.hh
 GNode.hh
