--- a/graphics/raytrace/RayTraceConfigInc.h.in
+++ b/graphics/raytrace/RayTraceConfigInc.h.in
@@ -1,5 +1,6 @@
 #define RAYTRACE_SRC_DIR "@RAYTRACE_SRC_DIR@"
 #define RAYTRACE_PTX_DIR "@RAYTRACE_PTX_DIR@"
+#define RAYTRACE_RNG_DIR "@RAYTRACE_RNG_DIR@"
 #define RAYTRACE_CURAND   @RAYTRACE_CURAND@
 #define RAYTRACE_TIMEVIEW @RAYTRACE_TIMEVIEW@
 
