pull out Geometry handling from glfwtest, gearing up for budding OpenGL utility classes into oglrap and testing with full AssimpWrap/GGeo geometry

--- a/graphics/glfw/glfwtest/CMakeLists.txt
+++ b/graphics/glfw/glfwtest/CMakeLists.txt
@@ -68,6 +68,9 @@ add_executable( ${name}
                 Array.cc
                 Scene.cc
                 Shader.cc
+                Buffer.cc
+                Geometry.cc
+                IGeometry.cc
                 VertexAttribute.cc
 )
 add_executable( Simple simple.cc )
