move OpenGL utilities into OGLRap package and use that from glfwtest and new package ggeoview

--- a/graphics/ggeoview/CMakeLists.txt
+++ b/graphics/ggeoview/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
-set(name GLFWTest)
+set(name GGeoView)
 project(${name})
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
@@ -13,44 +13,38 @@ include(EnvBuildOptions)
 find_package(GLEW REQUIRED)
 find_package(GLFW REQUIRED)
 find_package(OGLRap REQUIRED)
+find_package(AssimpWrap REQUIRED)
+find_package(GGeo REQUIRED)
+
 
 include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${GLEW_INCLUDE_DIRS} 
    ${GLFW_INCLUDE_DIRS} 
    ${OGLRap_INCLUDE_DIRS} 
+   ${AssimpWrap_INCLUDE_DIRS} 
+   ${GGeo_INCLUDE_DIRS} 
 )
 
 add_definitions(
    ${GLEW_DEFINITIONS}
    ${GLFW_DEFINITIONS}
    ${OGLRap_DEFINITIONS}
+   ${AssimpWrap_DEFINITIONS} 
+   ${GGeo_DEFINITIONS} 
 )
 
+add_executable( ${name} ggeoview.cc ) 
 
-add_executable( GLFWContext glfw_context.cc )
-add_executable( ${name} glfw_test.cc ) 
-add_executable( Simple simple.cc )
-
-target_link_libraries( GLFWContext 
-      ${GLEW_LIBRARIES}
-      ${GLFW_LIBRARIES}
-      ${OGLRap_LIBRARIES}
-)
 target_link_libraries( ${name} 
-      ${GLEW_LIBRARIES}
-      ${GLFW_LIBRARIES}
-      ${OGLRap_LIBRARIES}
-)
-target_link_libraries( Simple 
-      ${GLEW_LIBRARIES}
-      ${GLFW_LIBRARIES}
-      ${OGLRap_LIBRARIES}
+   ${GLEW_LIBRARIES}
+   ${GLFW_LIBRARIES}
+   ${OGLRap_LIBRARIES}
+   ${AssimpWrap_LIBRARIES} 
+   ${GGeo_LIBRARIES} 
 )
 
-install(TARGETS GLFWContext DESTINATION bin)
 install(TARGETS ${name} DESTINATION bin)
-install(TARGETS Simple DESTINATION bin)
 
 
 
