--- a/graphics/oglrap/CMakeLists.txt
+++ b/graphics/oglrap/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
-set(name GLFWTest)
+set(name OGLRap)
 project(${name})
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
@@ -9,49 +9,55 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
 include(EnvBuildOptions)
 
 ########### using env/cmake/Modules/*.cmake #####
-
 find_package(GLEW REQUIRED)
 find_package(GLFW REQUIRED)
-find_package(OGLRap REQUIRED)
 
 include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${GLEW_INCLUDE_DIRS} 
    ${GLFW_INCLUDE_DIRS} 
-   ${OGLRap_INCLUDE_DIRS} 
 )
 
 add_definitions(
    ${GLEW_DEFINITIONS}
    ${GLFW_DEFINITIONS}
-   ${OGLRap_DEFINITIONS}
 )
 
-
-add_executable( GLFWContext glfw_context.cc )
-add_executable( ${name} glfw_test.cc ) 
-add_executable( Simple simple.cc )
-
-target_link_libraries( GLFWContext 
-      ${GLEW_LIBRARIES}
-      ${GLFW_LIBRARIES}
-      ${OGLRap_LIBRARIES}
+add_library( ${name}  SHARED
+                Array.cc
+                Scene.cc
+                Shader.cc
+                Buffer.cc
+                Geometry.cc
+                IGeometry.cc
+                VertexAttribute.cc
 )
+
+add_executable( ${name}Test ${name}Test.cc )
+
 target_link_libraries( ${name} 
       ${GLEW_LIBRARIES}
       ${GLFW_LIBRARIES}
-      ${OGLRap_LIBRARIES}
 )
-target_link_libraries( Simple 
+target_link_libraries( ${name}Test
       ${GLEW_LIBRARIES}
       ${GLFW_LIBRARIES}
-      ${OGLRap_LIBRARIES}
+      ${name}
 )
 
-install(TARGETS GLFWContext DESTINATION bin)
-install(TARGETS ${name} DESTINATION bin)
-install(TARGETS Simple DESTINATION bin)
+install(TARGETS ${name}Test DESTINATION bin)
+install(TARGETS ${name} DESTINATION lib)
 
 
+SET(hdrs 
+Array.hh
+Buffer.hh
+Geometry.hh
+IGeometry.hh
+Scene.hh
+Shader.hh
+VertexAttribute.hh
+)
 
+install(FILES ${hdrs} DESTINATION include)
 
