pull the geometry out of oglrap, adopt GLM, construct MVP matrix based on Camera, View etc following g4daeview.py pattern, hunt for the geometry

--- a/graphics/oglrap/CMakeLists.txt
+++ b/graphics/oglrap/CMakeLists.txt
@@ -11,26 +11,31 @@ include(EnvBuildOptions)
 ########### using env/cmake/Modules/*.cmake #####
 find_package(GLEW REQUIRED)
 find_package(GLFW REQUIRED)
+find_package(GLM  REQUIRED)
+find_package(GGeo REQUIRED)  # bit reluctant on this 
 
 include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${GLEW_INCLUDE_DIRS} 
    ${GLFW_INCLUDE_DIRS} 
+   ${GLM_INCLUDE_DIRS} 
+   ${GGeo_INCLUDE_DIRS} 
 )
 
 add_definitions(
    ${GLEW_DEFINITIONS}
    ${GLFW_DEFINITIONS}
+   ${GGeo_DEFINITIONS}
 )
 
 add_library( ${name}  SHARED
-                Array.cc
                 Scene.cc
+                Camera.cc
+                View.cc
                 Shader.cc
-                Buffer.cc
-                Geometry.cc
-                IGeometry.cc
+                Demo.cc
                 VertexAttribute.cc
+                Common.cc
 )
 
 add_executable( ${name}Test ${name}Test.cc )
@@ -38,10 +43,12 @@ add_executable( ${name}Test ${name}Test.cc )
 target_link_libraries( ${name} 
       ${GLEW_LIBRARIES}
       ${GLFW_LIBRARIES}
+      ${GGeo_LIBRARIES}
 )
 target_link_libraries( ${name}Test
       ${GLEW_LIBRARIES}
       ${GLFW_LIBRARIES}
+      ${GGeo_LIBRARIES}
       ${name}
 )
 
@@ -50,12 +57,11 @@ install(TARGETS ${name} DESTINATION lib)
 
 
 SET(hdrs 
-Array.hh
-Buffer.hh
-Geometry.hh
-IGeometry.hh
 Scene.hh
+Camera.hh
+View.hh
 Shader.hh
+Demo.hh
 VertexAttribute.hh
 )
 
